--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
+    <div class="header">
+        <h6>Size: </h6> 
+        <button id="popup" class="btn btn-danger">Select</button>
+    </div>
+    <div class="board"></div>
+    <div class="footer">
+        <button class="btn btn-dark">Black</button>
+        <button class="btn btn-warning">Random</button>
+        <button class="btn btn-primary">Reset</button>
+    </div>
 </body>
 </html>
