--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <h6>Size: </h6> 
         <button id="popup" class="btn btn-danger">Select</button>
     </div>
+    <p id="message"></p>
     <div class="board"></div>
     <div class="footer">
-        <button class="btn btn-dark">Black</button>
-        <button class="btn btn-warning">Random</button>
-        <button class="btn btn-primary">Reset</button>
+        <button class="btn btn-dark" onclick="setColor('black')">Black</button>
+        <button class="btn btn-warning" onclick="setColor('random')">Random</button>
+        <button class="btn btn-primary" onclick="resetBoard('white')">Reset</button>
     </div>
 </body>
 </html>
