finished click to draw

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <body>
     <h1>Etch-A-Sketch</h1>
     <div class="header">
-        <h6>Size: </h6> 
+        <h5>Size of Board: </h5> 
         <button id="popup" class="btn btn-danger">Select</button>
     </div>
     <p id="message"></p>
+    <p id="draw"></p>
     <div class="board"></div>
     <div class="footer">
         <button class="btn btn-dark" onclick="setColor('black')">Black</button>
