prompt does not accept a NaN

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button id="popup" class="btn btn-danger">Select</button>
     </div>
     <p id="message"></p>
-    <p id="draw"></p>
+    <p id="draw">Click anywhere to toggle draw.</p>
     <div class="board"></div>
     <div class="footer">
         <button class="btn btn-dark" onclick="setColor('black')">Black</button>
